--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "concurrently": "^8.2.2",
     "sass": "^1.69.4"
   }
