--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"json-server -p 7000 -w db.json\"",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "json-server -p 7000 -w db.json"
   },
   "devDependencies": {
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "concurrently": "^8.2.2",
+    "json-server": "^0.17.4",
     "sass": "^1.69.4"
   }
 }
